# yrmcpserver

./: .gitignore  Cargo.toml  INTEGRATION.md  README.md  mcp.json  run_server.ps1  run_server.sh  test_client.py
.github/workflows/: release.yml
src/: main.rs  weather.rs
